added header section

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,23 @@
+:root {
+  --background-color: #1a1a1a;
+  --primary-text-color: #f1f1f1;
+  --secondary-text-color: #b6c4b6;
+  --primary-accent-color: #c3e2c2;
+  --secondary-accent-color: #9bb8cd;
+}
+
+@font-face {
+  font-family: "montserrat";
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "montserrat";
+  background-color: var(--background-color);
+  color: var(--primary-text-color);
 }
