--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,13 @@
 .header {
   text-align: center;
-  padding: 50px 0;
+  /* padding: 50px 0; */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .name {
